# 3DS-MC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Data/Cactus/: cactus_small.off
cmake/libigl/: libigl.cmake
include/: Arap.h  Mesh.h  Visualizer.h
lib/ImGuiFileDialog/: CMakeLists.txt  ImGuiFileDialog.cpp  ImGuiFileDialog.h  README.md
src/: Arap.cpp  Mesh.cpp  Visualizer.cpp
